<resources>
    <string name="app_name">WalletApp</string>
    <string name="email">Email</string>
    <string name="senha">Password</string>
    <string name="entrar">Login</string>
    <string name="cadastrar">REGISTER</string>
    <string name="login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome_">Name:</string>
    <string name="email_">Email:</string>
    <string name="profissao_">Profession:</string>
    <string name="nome">Name</string>
    <string name="avancar">Next</string>
    <string name="profissao">Profession</string>
    <string name="confirmar_senha">Confirm password</string>
    <string name="salvar">Save</string>
    <string name="tudo">All</string>
    <string name="entradas">Deposits</string>
    <string name="saidas">Expenses</string>
    <string name="sair">Logout</string>
    <string name="saldo">Balance</string>
    <string name="rs">US$</string>
    <string name="tipo">Type</string>
    <string name="descricao">Description</string>
    <string name="_01_jan">01 Jan</string>
    <string name="perfil">Profile</string>
    <string name="editar_dados">Edit data</string>
    <string name="entrada">Deposit</string>
    <string name="despesa">Expense</string>
    <string name="valor_rs">Value US$</string>
    <string name="adicionar">Add</string>
    <string name="menos_rs">- US$</string>
    <string name="dd_mm_aa">MM/DD/YY</string>
    <string name="lucro">Profit</string>
    <string name="lucro_total">Total profit</string>
    <string name="despesa_total">Total expenditure</string>
    <string name="cadastro">Register</string>
    <string name="extrato">Extract</string>
    <string name="entrada_total">Total profit</string>
    <string name="adicionar_conta">Total expenditure</string>
    <string name="nao_ha_lancamento">There is no posting!</string>
    <string name="string_vazia"> </string>
</resources>