<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ret_gradient"
    tools:context=".ui.AddContaActivity">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="32dp"
      android:layout_marginBottom="32dp"
      android:background="@drawable/ret_top_bottom_right"
      android:backgroundTint="?attr/colorOnPrimarySurface"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/toolbar"
      app:layout_constraintVertical_bias="0.0">

    <RadioGroup
        android:id="@+id/rbGroupAddConta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

      <RadioButton
          android:id="@+id/rb_entrada"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:buttonTint="?attr/colorPrimary"
          android:text="@string/entrada"
          android:textColor="?attr/colorOnPrimary"
          android:textColorLink="?attr/colorPrimary"
          android:textSize="18sp" />

      <RadioButton
          android:id="@+id/rb_despesa"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:buttonTint="?attr/colorPrimary"
          android:text="@string/despesa"
          android:textColor="?attr/colorOnPrimary"
          android:textColorLink="?attr/colorPrimary"
          android:textSize="18sp" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etDescricaoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="64dp"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:counterTextColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toTopOf="@+id/etValorAddLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbGroupAddConta">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/etDescricao"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/descricao"
          android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etValorAddLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintBottom_toTopOf="@+id/etDataAddLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescricaoLayout">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/etValorAdd"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/valor_rs"
          android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etDataAddLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_adicionar_conta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValorAddLayout">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/etDataAdd"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/dd_mm_aa"
          android:inputType="datetime" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_adicionar_conta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginEnd="94dp"
        android:backgroundTint="?attr/colorPrimary"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/adicionar"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDataAddLayout" />
  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>