<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimarySurface"
    tools:context=".ui.PerfilFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/ret_radius_bottom_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvPerfilFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perfil"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cdSaldo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:elevation="20dp"
        android:orientation="vertical"
        app:cardBackgroundColor="?attr/colorOnPrimarySurface"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvNomePerfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nome_"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvNomePerfilResultado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nome"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <TextView
                    android:id="@+id/tvEmailPerfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvEmailPerfilResultado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="example@example.com"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    android:id="@+id/tvProfissaoPerfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profissao_"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvProfissaoPerfilResultado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profissao"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/ret_radius_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cdSaldo" >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_lancamento_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:src="@android:drawable/ic_input_add"
            app:backgroundTint="?attr/colorOnPrimarySurface"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="?attr/colorPrimaryVariant" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>